--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -11,6 +11,9 @@
         <ion-badge color="primary">{{ totalSuccess }}</ion-badge>
         <span style="margin-left: 5px;">x</span>
         <ion-badge color="danger" style="margin-left:5px;">{{ totalErrors }}</ion-badge>
+
+          <ion-icon name="share-social-outline" style="padding-left: 5px;padding-top:2px;cursor: pointer;"></ion-icon>
+
       </ion-item>
       <ion-item *ngIf="!alreadyStarted">
         <ion-chip outline color="secondary" (click)="start()">
@@ -122,88 +125,62 @@
     </ng-template>
   </ion-modal>
 
-  <div id="container">
+  <div id="container" style="padding-right:8px;">
     <div id="board-container">
-      <!-- <span class="process" *ngIf="alreadyStarted">{{grammaticalClass}}</span> -->
-      <!-- <span class="meaning" style="text-align: center;margin: 0px 5px 5px 5px">{{meaning}}</span> -->
-      <!-- <ion-item-divider class="customDivider"></ion-item-divider> -->
       <div class="pageError" *ngIf="errorPage">
         <ion-icon name="warning-outline" color="danger"></ion-icon><br>
         <ion-label color="danger">Estamos enfrentando problemas! <br><br>Favor tentar mais tarde! <br><br>Desculpe o transtorno!</ion-label>
       </div>
-      <div id="board_try1">
-        <!-- <P>1</P> -->
+      <!-- <div *ngFor="let num of [].constructor(limitTry)" id="board_try{{num}}" class="{{num > 1 ?? 'hide'}}">
+        <P>{{num}}</P>
+        <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{num}}_try{{num}}">
+        </div>
+      </div> -->
+      <div *ngFor="let num of limitTryArray; let index = index" id="board_try{{num}}" [class.hide]="index > 0">
+        <P>{{num}}</P>
+        <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try{{num}}">
+        </div>
+      </div>
+      <!-- <div id="board_try1">
+        <P>1</P>
         <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try1">
         </div>
       </div>
       <div id="board_try2" class="hide">
-        <!-- <P>2</P> -->
+        <P>2</P>
         <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try2">
         </div>
       </div>
       <div id="board_try3" class="hide">
-        <!-- <P>3</P> -->
+        <P>3</P>
         <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try3">
         </div>
       </div>
       <div id="board_try4" class="hide">
-        <!-- <P>4</P> -->
+        <P>4</P>
         <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try4">
         </div>
       </div>
       <div id="board_try5" class="hide">
-        <!-- <P>5</P> -->
+        <P>5</P>
         <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try5">
-        </div>
-      </div>
-      <!-- <div id="board">
-        <P>&nbsp;&nbsp;</P>
-        <div *ngFor="let div of wordSquares" class="square animate__animated" [id]="div.id">
         </div>
       </div> -->
     </div>
-
-    <!-- <div id="divError" style="text-align: center;">
-      <span id="errorMessage" class="error-message hide">{{ errorMessage }}</span>
-      <ion-item-divider id="errorMessageHr" class="customDivider hide"></ion-item-divider>
-    </div> -->
   </div>
 
   <div id="keyboard-container">
-    <div class="keyboard-row">
-      <button data-key="q" (click)="updateGuessedWords('q')">q</button>
-      <button data-key="w" (click)="updateGuessedWords('w')">w</button>
-      <button data-key="e" (click)="updateGuessedWords('e')">e</button>
-      <button data-key="r" (click)="updateGuessedWords('r')">r</button>
-      <button data-key="t" (click)="updateGuessedWords('t')">t</button>
-      <button data-key="y" (click)="updateGuessedWords('y')">y</button>
-      <button data-key="u" (click)="updateGuessedWords('u')">u</button>
-      <button data-key="i" (click)="updateGuessedWords('i')">i</button>
-      <button data-key="o" (click)="updateGuessedWords('o')">o</button>
-      <button data-key="p" (click)="updateGuessedWords('p')">p</button>
+    <div class="keyboard-row" >
+      <button *ngFor="let first of keyboardFirstRow" (click)="updateGuessedWords($event)">{{first}}</button>
     </div>
     <div class="keyboard-row">
       <div class="spacer-half"></div>
-      <button data-key="a" (click)="updateGuessedWords('a')">a</button>
-      <button data-key="s" (click)="updateGuessedWords('s')">s</button>
-      <button data-key="d" (click)="updateGuessedWords('d')">d</button>
-      <button data-key="f" (click)="updateGuessedWords('f')">f</button>
-      <button data-key="g" (click)="updateGuessedWords('g')">g</button>
-      <button data-key="h" (click)="updateGuessedWords('h')">h</button>
-      <button data-key="j" (click)="updateGuessedWords('j')">j</button>
-      <button data-key="k" (click)="updateGuessedWords('k')">k</button>
-      <button data-key="l" (click)="updateGuessedWords('l')">l</button>
+      <button *ngFor="let second of keyboardSecondRow" (click)="updateGuessedWords($event)">{{second}}</button>
       <div class="spacer-half"></div>
     </div>
     <div class="keyboard-row">
       <button data-key="enter" class="wide-button" (click)="handleSubmitWord()">Enter</button>
-      <button data-key="z" (click)="updateGuessedWords('z')">z</button>
-      <button data-key="x" (click)="updateGuessedWords('x')">x</button>
-      <button data-key="c" (click)="updateGuessedWords('c')">c</button>
-      <button data-key="v" (click)="updateGuessedWords('v')">v</button>
-      <button data-key="b" (click)="updateGuessedWords('b')">b</button>
-      <button data-key="n" (click)="updateGuessedWords('n')">n</button>
-      <button data-key="m" (click)="updateGuessedWords('m')">m</button>
+      <button *ngFor="let third of keyboardThirdRow" (click)="updateGuessedWords($event)">{{third}}</button>
       <button data-key="del" class="wide-button" (click)="handleDeleteLetter()">Del</button>
     </div>
   </div>
@@ -217,21 +194,15 @@
         <ion-col size="12">
           <ion-chip outline color="secondary">
             <ion-icon name="trophy-outline"></ion-icon>
+            PONTOS
             <ion-badge color="light" style="margin-left: 10px;">{{score}}</ion-badge>
-            <ion-badge color="success" style="margin-left: 10px;">10</ion-badge>
+            <ion-badge color="dark" style="margin-left: 10px;">{{totalScore}}</ion-badge>
           </ion-chip>
-          <ion-chip outline color="secondary">
-            <ion-icon name="share-social-outline" style="padding-right: 15px;"></ion-icon>
-          </ion-chip>
-          
+
           <ion-chip id="triggerHelp" outline color="secondary" style="float: right" data-toggle="tooltip" data-placement="bottom" title="Ajuda">
             AJUDA
             <ion-icon name="help-circle-outline" style="margin-left:5px;"></ion-icon>
           </ion-chip>
-          <!-- <ion-chip outline color="secondary" (click)="handleExtraHelpButtonClick()" style="float: right" data-toggle="tooltip" data-placement="bottom" title="Ajuda">
-            AJUDA
-            <ion-icon name="help-circle-outline" style="margin-left:5px;"></ion-icon>
-          </ion-chip> -->
         </ion-col>
       </ion-row>
     </ion-grid>
