check platform + share score html template started

--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -126,6 +126,7 @@
   </ion-modal>
 
   <div id="container" style="padding-right:8px;">
+    <button (click)="showShareOptions()">Share</button>
     <div id="board-container">
       <div class="pageError" *ngIf="errorPage">
         <ion-icon name="warning-outline" color="danger"></ion-icon><br>
