--- a/frontend/src/app/components/social-share/social-share.component.html
+++ b/frontend/src/app/components/social-share/social-share.component.html
@@ -1,3 +1,20 @@
-<p>
-  social-share works!
-</p>
+
+<div padding class="mainContent">
+  <div no-margin margin-top class="feedbackCard">
+    <ion-row class="textCenter">
+      <div>
+          You can share Via :-
+      </div>
+    </ion-row>
+  <div class="logoList">
+    <ion-row *ngFor="let item of sharingList">
+          <ion-col (click)="shareVia(item)">
+              <ion-img class="socialLogo" [src]="item['logo']" style="width: 40px; height: 40px;"></ion-img>
+          </ion-col>
+    </ion-row>
+  </div>    
+  <ion-button class="btn" (click)="closeModal()" fill="clear">
+    Close
+  </ion-button>
+  </div>
+  </div>
