--- a/frontend/src/app/components/social-share/social-share.component.html
+++ b/frontend/src/app/components/social-share/social-share.component.html
@@ -1,20 +1,26 @@
 
 <div padding class="mainContent">
   <div no-margin margin-top class="feedbackCard">
-    <ion-row class="textCenter">
-      <div>
-          You can share Via :-
-      </div>
-    </ion-row>
-  <div class="logoList">
-    <ion-row *ngFor="let item of sharingList">
-          <ion-col (click)="shareVia(item)">
-              <ion-img class="socialLogo" [src]="item['logo']" style="width: 40px; height: 40px;"></ion-img>
-          </ion-col>
-    </ion-row>
-  </div>    
-  <ion-button class="btn" (click)="closeModal()" fill="clear">
-    Close
-  </ion-button>
+    <h2>Desepenho</h2>
+    <div class="clipboard">
+      <b>{{wordsStorage.score}}</b>
+      <p>PONTOS</p>
+      <b>{{wordsStorage.success}}</b>
+      <p>ACERTOS</p>
+      <b>{{wordsStorage.errors}}</b>
+      <p>ERROS</p>
+      <b>{{wordsStorage.success + wordsStorage.errors}}</b>
+      <p>TOTAL</p>
+    </div>
+    <div class="footer">
+      <div class="logoList">
+        <div *ngFor="let item of sharingList">
+          <ion-img class="socialLogo" [src]="item['logo']" style="width: 50px; height: 50px;"></ion-img>
+        </div>
+      </div>    
+      <ion-button class="btn" (click)="closeModal()" fill="clear">
+        Fechar
+      </ion-button>
+    </div>
   </div>
-  </div>
+</div>
