--- a/frontend/src/app/components/social-share/social-share.component.scss
+++ b/frontend/src/app/components/social-share/social-share.component.scss
@@ -1,34 +1,57 @@
-.textCenter {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  
-}
-.socialLogo {
-  width: 50px;
-  height: 50px;
-}
-.logoList {
-  margin-top: 30px;
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-.btn {
-  float: right;
-}
-.mainContent {
-  flex: 1;
-  background-color: rgba(0, 0, 0, 0.3) !important;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  display: flex;
-}
+// .mainContent {
+//   flex: 1;
+//   background-color: rgba(0, 0, 0, 0.3) !important;
+//   justify-content: center;
+//   align-content: center;
+//   align-items: center;
+//   display: flex;
+// }
 .feedbackCard {
-  width: 100%;
+  display: block;
   border-radius: 4px;
   background-color: white;
+  text-align: center;
+  padding: 0px;
+}
+.feedbackCard h2 {
+  margin: 0.5em 0 0 0;
+  font-size: 4rem;
+  font-weight: 500;
+}
+.clipboard {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+  line-height: 1em;
+  padding: 20px 0;
+}
+.clipboard b {
+  grid-row: 1;
+  //color: #FAFAFF;
+  font-size: 2em;
+  padding-bottom: 0.5em;
+}
+.clipboard p {
+  grid-row: 2;
+  height: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+.footer {
+  width: 100%;
+  bottom: 0; // Moves it up a little from the bottom
+}
+.logoList {
+  display: flex;
+  margin-bottom: 20px;
+  width: 100%;
+  justify-items: last baseline;
+  justify-content: center;
+}
+
+.socialLogo {
+  padding: 10px;
 }
