--- a/frontend/src/app/components/social-share/social-share.component.scss
+++ b/frontend/src/app/components/social-share/social-share.component.scss
@@ -1,38 +1,28 @@
-// .mainContent {
-//   flex: 1;
-//   background-color: rgba(0, 0, 0, 0.3) !important;
-//   justify-content: center;
-//   align-content: center;
-//   align-items: center;
-//   display: flex;
-// }
 .feedbackCard {
   display: block;
   border-radius: 4px;
-  background-color: white;
   text-align: center;
   padding: 0px;
 }
 .feedbackCard h2 {
   margin: 0.5em 0 0 0;
-  font-size: 4rem;
+  font-size: 2rem;
   font-weight: 500;
 }
-.clipboard {
+.performance {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
   line-height: 1em;
-  padding: 20px 0;
+  padding: 10px 0;
+  margin-top: 10px;
 }
-.clipboard b {
+.performance b {
   grid-row: 1;
-  //color: #FAFAFF;
   font-size: 2em;
-  padding-bottom: 0.5em;
 }
-.clipboard p {
+.performance p {
   grid-row: 2;
   height: 2em;
   display: flex;
@@ -40,18 +30,58 @@
   align-items: center;
   margin: 0;
 }
+.performance ion-label {
+  grid-row: 3;
+  height: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+.average {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
+  justify-content: center;
+  align-content: center;
+  line-height: 1em;
+}
+.average b {
+  grid-row: 1;
+  font-size: 2em;
+}
+.average p {
+  grid-row: 2;
+  height: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+.average ion-label {
+  grid-row: 3;
+  height: 1em;
+}
 .footer {
+  display: flex;
   width: 100%;
-  bottom: 0; // Moves it up a little from the bottom
+  margin-bottom: 15px;
 }
 .logoList {
   display: flex;
-  margin-bottom: 20px;
   width: 100%;
-  justify-items: last baseline;
   justify-content: center;
+  margin: 0;
+}
+.socialLogo {
+  padding-left: 10px;
+}
+#clipboard {
+  border-radius: 8px;
+  background-color: beige;
 }
 
-.socialLogo {
-  padding: 10px;
+.custom-border {
+  border-radius: 24px;
+  margin: 10px;
 }
