--- a/frontend/src/app/components/social-share/social-share.component.html
+++ b/frontend/src/app/components/social-share/social-share.component.html
@@ -1,4 +1,3 @@
-
 <div padding class="mainContent">
   <div no-margin margin-top class="feedbackCard">
     <div id="clipboard">
@@ -35,7 +34,7 @@
         <ion-img class="socialLogo" [src]="item['logo']" style="width: 50px; height: 50px;"></ion-img>
       </div>
     </div>
-    <ion-button class="btn" (click)="copyText()">
+    <ion-button class="btn" (click)="cc()">
       Compartilhe
     </ion-button>
     <br>
