--- a/frontend/src/app/components/modal-info/modal-info.component.html
+++ b/frontend/src/app/components/modal-info/modal-info.component.html
@@ -19,12 +19,12 @@
       <ion-accordion-group>
         <ion-accordion value="">
           <ion-item slot="header">
-            <ion-label>Sobre o game</ion-label>
+            <ion-label>Regras</ion-label>
           </ion-item>
 
           <ion-list slot="content">
             <ion-item>
-              <ion-label>15 palavras por dia</ion-label>
+              <ion-label>7 palavras por dia</ion-label>
               <ion-icon slot="end" name="checkmark-done-outline"></ion-icon>
             </ion-item>
             <ion-item>
@@ -52,9 +52,9 @@
                     <ion-item>
                       <ion-label>Ver sinônimos -1.5 pontos</ion-label>
                     </ion-item>
-                    <ion-item>
+                    <!-- <ion-item>
                       <ion-label>Ver uso na frase -2 pontos</ion-label>
-                    </ion-item>
+                    </ion-item> -->
                   </ion-list>
                 </ion-accordion>
               </ion-accordion-group>
@@ -82,11 +82,34 @@
     <ion-footer>
       <ion-item>
         <ion-avatar slot="start">
+          <img src="assets/inspiration-male.png" />
+        </ion-avatar>
+        <ion-label style="padding-top:5px;">
+          <h2>Inspirado no game TERMO
+          </h2>
+          <p>
+            Visite:
+            <a href="https://term.ooo/" target="_blank"  style="margin-left:5px;">Termo</a>
+          </p>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-avatar slot="start">
+          <img src="assets/help.png" />
+        </ion-avatar>
+        <ion-label style="padding-top:5px;">
+          <h2>Fontes de ajuda</h2>
+          <a href="https://github.com/ThiagoNelsi/dicio-api" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+          <a href="https://github.com/ianlenehan/wordle-clone" target="_blank" style="margin-left:5px;"><ion-icon name="logo-github"></ion-icon></a>
+        </ion-label>
+        
+      </ion-item>
+      <ion-item>
+        <ion-avatar slot="start">
           <img src="https://avatars.githubusercontent.com/u/9452793?v=4" />
         </ion-avatar>
         <ion-label style="padding-top:5px;">
-          <h2>By Flávio Alvarenga 
-          </h2>
+          <h2>By Flávio Alvarenga</h2>
           <p>
             Fullstack Developer
             <a href="https://github.com/flavio-fgjj" target="_blank"  style="margin-left:5px;"><ion-icon name="logo-github"></ion-icon></a>
