--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -11,17 +11,16 @@
         <ion-badge color="primary">{{ totalSuccess }}</ion-badge>
         <span style="margin-left: 5px;">x</span>
         <ion-badge color="danger" style="margin-left:5px;">{{ totalErrors }}</ion-badge>
-
-          <ion-icon name="share-social-outline" style="padding-left: 5px;padding-top:2px;cursor: pointer;" (click)="showShareOptions()"></ion-icon>
-
+        <span style="margin-left: 5px;">=</span>
+        <ion-badge color="success" style="margin-left: 5px;">{{totalScore}}</ion-badge>
+        <!-- <ion-icon name="share-social-outline" style="padding-left:5px;padding-top:2px;cursor: pointer;" (click)="showShareOptions()"></ion-icon> -->
       </ion-item>
-      <ion-item *ngIf="!alreadyStarted">
+      <ion-item *ngIf="!alreadyStarted" style="display:none;">
         <ion-chip outline color="secondary" (click)="start()">
           <ion-icon name="play-outline" style="padding-right: 10px;"></ion-icon>
         </ion-chip>
       </ion-item>
     </ion-item-group>
-   
   </ion-toolbar>
 </ion-header>
 
@@ -132,6 +131,20 @@
         <ion-label color="danger">Estamos enfrentando problemas! <br><br>Favor tentar mais tarde! <br><br>Desculpe o transtorno!</ion-label>
       </div>
 
+      <div *ngIf="!errorPage && alreadyStarted">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="12">
+              <span>Você está na {{actualWord}}ª palavra do dia</span><br>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">
+              <ion-badge color="secondary">{{score}}</ion-badge>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </div>
       <!-- <div *ngFor="let num of limitTryArray; let index = index" id="board_try{{num}}" [class.hide]="index > 0"> -->
       <div *ngFor="let num of limitAttemptsArray; let index = index" id="board_try{{num}}">
         <!-- <P>{{num}}</P> -->
@@ -164,13 +177,9 @@
     <ion-grid>
       <ion-row text-center>
         <ion-col size="12">
-          <ion-chip outline color="secondary">
-            <ion-icon name="trophy-outline"></ion-icon>
-            PONTOS
-            <ion-badge color="secondary" style="margin-left: 10px;">{{score}}</ion-badge>
-            <ion-badge color="success" style="margin-left: 10px;">{{totalScore}}</ion-badge>
+          <ion-chip outline color="secondary" (click)="showShareOptions()">
+            <ion-icon name="bar-chart-outline" style="float: right; margin-right:5px;"></ion-icon>
           </ion-chip>
-
           <ion-chip id="triggerHelp" outline color="secondary" style="float: right; margin-right:5px;" data-toggle="tooltip" data-placement="bottom" title="Ajuda">
             AJUDA
             <ion-icon name="help-circle-outline" style="margin-left:5px;"></ion-icon>
