--- a/frontend/src/app/components/modal-info/modal-info.component.html
+++ b/frontend/src/app/components/modal-info/modal-info.component.html
@@ -85,12 +85,7 @@
           <img src="assets/inspiration-male.png" />
         </ion-avatar>
         <ion-label style="padding-top:5px;">
-          <h2>Inspirado no game TERMO
-          </h2>
-          <p>
-            Visite:
-            <a href="https://term.ooo/" target="_blank"  style="margin-left:5px;">Termo</a>
-          </p>
+          <h2>Inspirado no game <a href="https://term.ooo/" target="_blank"  style="margin-left:5px;">TERMO</a></h2>
         </ion-label>
       </ion-item>
       <ion-item>
@@ -98,9 +93,12 @@
           <img src="assets/help.png" />
         </ion-avatar>
         <ion-label style="padding-top:5px;">
-          <h2>Fontes de ajuda</h2>
-          <a href="https://github.com/ThiagoNelsi/dicio-api" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-          <a href="https://github.com/ianlenehan/wordle-clone" target="_blank" style="margin-left:5px;"><ion-icon name="logo-github"></ion-icon></a>
+          <h2>Fontes de ajuda/estudo</h2>
+          <div style="display:flex;justify-content: left;">
+            <a href="https://www.ime.usp.br/~pf/dicios/index.html" target="_blank">Base de dados</a>
+            <a href="https://github.com/ThiagoNelsi/dicio-api" target="_blank" style="margin-left:5px;"><ion-icon name="logo-github"></ion-icon></a>
+            <a href="https://github.com/ianlenehan/wordle-clone" target="_blank" style="margin-left:5px;"><ion-icon name="logo-github"></ion-icon></a>
+          </div>
         </ion-label>
         
       </ion-item>
@@ -110,11 +108,11 @@
         </ion-avatar>
         <ion-label style="padding-top:5px;">
           <h2>By Flávio Alvarenga</h2>
-          <p>
-            Fullstack Developer
+          <div style="display:flex;justify-content: left;">
+            <p>Fullstack Developer</p>
             <a href="https://github.com/flavio-fgjj" target="_blank"  style="margin-left:5px;"><ion-icon name="logo-github"></ion-icon></a>
             <a href="https://www.linkedin.com/in/fl%C3%A1vio-de-almeida-alvarenga-82a2b177/" target="_blank" style="margin-left:5px;"><ion-icon name="logo-linkedin"></ion-icon></a>
-          </p>
+          </div>
         </ion-label>
       </ion-item>
     </ion-footer>
