save typed words at storage and keep total of points

--- a/frontend/src/app/components/modal-info/modal-info.component.html
+++ b/frontend/src/app/components/modal-info/modal-info.component.html
@@ -88,7 +88,7 @@
           <h2>Inspirado no game <a href="https://term.ooo/" target="_blank"  style="margin-left:5px;">TERMO</a></h2>
         </ion-label>
       </ion-item>
-      <ion-item>
+      <!-- <ion-item>
         <ion-avatar slot="start">
           <img src="assets/help.png" />
         </ion-avatar>
@@ -100,8 +100,7 @@
             <a href="https://github.com/ianlenehan/wordle-clone" target="_blank" style="margin-left:5px;"><ion-icon name="logo-github"></ion-icon></a>
           </div>
         </ion-label>
-        
-      </ion-item>
+      </ion-item> -->
       <ion-item>
         <ion-avatar slot="start">
           <img src="https://avatars.githubusercontent.com/u/9452793?v=4" />
