layout + fix at service

--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -58,8 +58,9 @@
 }
 
 .square {
-  border: 2px solid #111D12;
+  border: 2px solid darkgray;
   //border: 2px solid #D7C6AB;
+  //border: 2px solid #36abe0;
   width: 40px;
   height: 40px;
   max-width: 40px;
