--- a/frontend/src/app/components/success/success.component.html
+++ b/frontend/src/app/components/success/success.component.html
@@ -1,24 +1,63 @@
 <ion-content padding style="text-align:cemter;">
   <ion-grid class="ion-text-center">
-    <ion-row>
+    <ion-row *ngIf="type !== 'finished'">
       <ion-col size="12">
         <ion-label *ngIf="type === 'success'" color="success" style="font-weight: bold;"><h1>PARABÉNS!!! 😎</h1></ion-label>
-        <ion-label *ngIf="type !== 'success'" color="danger" style="font-weight: bold;"><h1>NÃO FOi DESSA VEZ!!! 😕</h1></ion-label>
+        <ion-label *ngIf="type !== 'success'" color="danger" style="font-weight: bold;"><h1>NÃO FOI DESSA VEZ!!! 😕</h1></ion-label>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="type !== 'finished'">
       <ion-col size="12">
         <ion-label *ngIf="type === 'success'" color="success" style="font-weight: bold;"><h1>Você acertou na {{attempts}}ª tentativa! 🔥</h1></ion-label>
         <ion-label *ngIf="type !== 'success'" color="danger" style="font-weight: bold;"><h1>A palavra correta é:</h1></ion-label>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="type === 'finished'" style="margin-top: 30px;">
+      <ion-col size="12">
+        <ion-label color="primary" style="font-weight: bold;"><h1>Compartilhe seu desempenho 🔥</h1></ion-label>
+        <ion-row style="margin-top: 30px;">
+          <ion-col size="4">
+            <ion-label>🏆</ion-label>
+          </ion-col>
+          <ion-col size="4">
+            <ion-label>Pontos</ion-label>
+          </ion-col>
+          <ion-col size="4">
+            <ion-label>{{wordsStorage.score}}</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="4">
+            <ion-label>✅</ion-label>
+          </ion-col>
+          <ion-col size="4">
+            <ion-label>Acertos</ion-label>
+          </ion-col>
+          <ion-col size="4">
+            <ion-label>{{wordsStorage.success}}</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="4">
+            <ion-label>❌</ion-label>
+          </ion-col>
+          <ion-col size="4">
+            <ion-label>Erros</ion-label>
+          </ion-col>
+          <ion-col size="4">
+            <ion-label>{{wordsStorage.errors}}</ion-label>
+          </ion-col>
+        </ion-row>
+        
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="type !== 'finished'">
       <ion-col size="12">
         <ion-label *ngIf="type === 'success'" color="success" style="font-weight: bold;text-decoration: underline;"><h1>{{word}}</h1></ion-label>
         <ion-label *ngIf="type !== 'success'" color="danger" style="font-weight: bold;text-decoration: underline;"><h1>{{word}}</h1></ion-label>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="type !== 'finished'">
       <ion-col size="12">
         <ion-card>
           <ion-card-header>
