--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -13,7 +13,7 @@
         <span style="margin-left: 5px;">x</span>
         <ion-badge color="danger" style="margin-left:5px;">{{ totalErrors }}</ion-badge>
         <span style="margin-left: 5px;">=</span>
-        <ion-badge color="success" style="margin-left: 5px;">{{totalScore}}</ion-badge>
+        <ion-badge color="success" style="margin-left: 5px;">{{ totalScore }}</ion-badge>
         <!-- <ion-icon name="share-social-outline" style="padding-left:5px;padding-top:2px;cursor: pointer;" (click)="showShareOptions()"></ion-icon> -->
       </ion-item>
       <ion-item *ngIf="!alreadyStarted" style="display:none;">
@@ -32,7 +32,7 @@
     [backdropDismiss]="true"
   >
     <ng-template>
-      <ion-header translucent>
+      <ion-header>
         <ion-toolbar>
           <ion-title slot="start">Ajuda extra</ion-title>
           <ion-buttons slot="end">
@@ -116,7 +116,7 @@
           </ion-row>
           <ion-row>
             <ion-col size="12">
-              <ion-label style="display:flex;justify-content: center;"><ion-badge color="secondary">{{score}}</ion-badge><span style="margin-left:5px;">pontos</span></ion-label>
+              <ion-label style="display:flex;justify-content: center;"><ion-badge color="primary">{{score}}</ion-badge><span style="margin-left:5px;">pontos</span></ion-label>
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -151,10 +151,10 @@
     <ion-grid>
       <ion-row text-center>
         <ion-col size="12">
-          <ion-chip outline color="secondary" (click)="showShareOptions()">
+          <ion-chip outline color="primary" (click)="showShareOptions()">
             <ion-icon name="bar-chart-outline" style="float: right; margin-right:5px;"></ion-icon>
           </ion-chip>
-          <ion-chip id="triggerHelp" outline color="secondary" style="float: right; margin-right:5px;" data-toggle="tooltip" data-placement="bottom" title="Ajuda">
+          <ion-chip id="triggerHelp" outline color="primary" style="float: right; margin-right:5px;" data-toggle="tooltip" data-placement="bottom" title="Ajuda">
             AJUDA
             <ion-icon name="help-circle-outline" style="margin-left:5px;"></ion-icon>
           </ion-chip>
