--- a/frontend/src/app/components/social-share/social-share.component.scss
+++ b/frontend/src/app/components/social-share/social-share.component.scss
@@ -78,7 +78,7 @@
 }
 #clipboard {
   border-radius: 8px;
-  background-color: #DCE1E3;
+  background-color: #5c6e68;
 }
 .custom-border {
   border-radius: 24px;
