--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header >
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-title size="medium" class="pageTitle" style="text-align: center;">
+      <ion-title size="medium" class="pageTitle" style="text-align: center; color: #fff !important">
         Word Game<br>
         BETA
       </ion-title>
@@ -9,11 +9,14 @@
     <app-modal-info></app-modal-info>
     <ion-item-group slot="end" style="border: none !important;">
       <ion-item *ngIf="alreadyStarted" style="margin-right:5px;">
-        <ion-badge color="primary">{{ totalSuccess }}</ion-badge>
-        <span style="margin-left: 5px;">x</span>
-        <ion-badge color="danger" style="margin-left:5px;">{{ totalErrors }}</ion-badge>
-        <span style="margin-left: 5px;">=</span>
-        <ion-badge color="success" style="margin-left: 5px;">{{ totalScore }}</ion-badge>
+        <!-- <ion-badge color="primary" mode="ios">✅ {{ totalSuccess }}</ion-badge> -->
+        <span style="color: #fff !important">✅ {{ totalSuccess }}</span>
+        <!-- <span style="margin-left: 5px; color: #fff !important">x</span> -->
+        <!-- <ion-badge color="danger" mode="ios" style="margin-left:5px;">{{ totalErrors }}</ion-badge> -->
+        <span style="margin-left: 10px; color: #fff !important">❌ {{ totalErrors }}</span>
+        <!-- <span style="margin-left: 5px; color: #fff !important">=</span> -->
+        <!-- <ion-badge color="success" mode="ios" style="margin-left: 5px;">{{ totalScore }}</ion-badge> -->
+        <!-- <span style="margin-left: 8px; color: #fff !important">🏆 {{ totalScore }}</span> -->
         <!-- <ion-icon name="share-social-outline" style="padding-left:5px;padding-top:2px;cursor: pointer;" (click)="showShareOptions()"></ion-icon> -->
       </ion-item>
       <ion-item *ngIf="!alreadyStarted" style="display:none;">
@@ -34,7 +37,7 @@
     <ng-template>
       <ion-header>
         <ion-toolbar>
-          <ion-title slot="start">Ajuda extra</ion-title>
+          <ion-title slot="start" style="color:#fff !important">Ajuda extra</ion-title>
           <ion-buttons slot="end">
             <ion-button (click)="closeModal()"><ion-icon name="close-circle-outline"></ion-icon></ion-button>
           </ion-buttons>
@@ -44,21 +47,21 @@
         <ion-accordion-group>
           <ion-accordion>
             <ion-item slot="header">
-              <ion-label>Significado</ion-label>
+              <ion-label style="color:#fff !important">Significado</ion-label>
             </ion-item>
             <ion-list slot="content">
               <ion-item>
                 <ion-card>
                   <ion-card-header>
-                    <ion-card-subtitle>{{grammaticalClass}}</ion-card-subtitle>
+                    <ion-card-subtitle style="color:#fff !important">{{grammaticalClass}}</ion-card-subtitle>
                     <ion-card-title *ngIf="!meaningSeen">
-                      <ion-chip outline color="secondary" (click)="fnMeaningSeen()">
+                      <ion-chip outline color="warning" (click)="fnMeaningSeen()">
                         <ion-icon name="eye-outline" style="padding-right: 10px;"></ion-icon>
                       </ion-chip>
                     </ion-card-title>
                   </ion-card-header>
 
-                  <ion-card-content *ngIf="meaningSeen" style="text-align: center">
+                  <ion-card-content *ngIf="meaningSeen" style="text-align: center;color:#fff !important">
                     {{meaning}}
                   </ion-card-content>
                 </ion-card>
@@ -68,20 +71,20 @@
 
           <ion-accordion>
             <ion-item slot="header">
-              <ion-label>Sinônimos/Antônimos</ion-label>
+              <ion-label style="color:#fff !important">Sinônimos/Antônimos</ion-label>
             </ion-item>
             <ion-list slot="content">
               <ion-item>
                 <ion-card>
                   <ion-card-header>
                     <ion-card-title *ngIf="!synSeen">
-                      <ion-chip outline color="secondary" (click)="fnSynSeen()">
+                      <ion-chip outline color="warning" (click)="fnSynSeen()">
                         <ion-icon name="eye-outline" style="padding-right: 10px;"></ion-icon>
                       </ion-chip>
                     </ion-card-title>
                   </ion-card-header>
                   <ion-card-content *ngIf="synSeen">
-                    <ul>
+                    <ul style="color:#fff !important">
                       <li>Sinônimos</li>
                       <ol *ngFor="let s of syn">
                         {{s}}
@@ -104,25 +107,27 @@
   <div id="container" style="padding-right:8px;">
     <div id="board-container">
       <div class="pageError" *ngIf="errorPage && !alreadyStarted">
-        <ion-label color="danger"><ion-icon name="warning-outline" color="danger"></ion-icon><br>Estamos enfrentando problemas! <br><br>Favor tentar mais tarde! <br><br>Desculpe o transtorno!</ion-label>
+        <ion-label color="light"><ion-icon name="warning-outline" color="danger"></ion-icon><br>Estamos enfrentando problemas! <br><br>Favor tentar mais tarde! <br><br>Desculpe o transtorno!</ion-label>
       </div>
 
       <div *ngIf="!errorPage && alreadyStarted">
         <ion-grid>
           <ion-row>
             <ion-col size="12">
-              <span>Você está na {{actualWord}}ª palavra do dia</span><br>
+              <span style="color:#fff !important">{{actualWord}}ª das {{words.length}} palavras do dia</span><br>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col size="12">
-              <ion-label style="display:flex;justify-content: center;"><ion-badge color="primary">{{score}}</ion-badge><span style="margin-left:5px;">pontos</span></ion-label>
+              <ion-label style="display:flex;justify-content: center;">
+                <ion-badge color="light" mode="ios">{{score}}</ion-badge><span style="margin-left:5px;color:#fff !important">pontos</span>
+              </ion-label>
             </ion-col>
           </ion-row>
         </ion-grid>
       </div>
       <div *ngFor="let num of limitAttemptsArray; let index = index" id="board_try{{num}}">
-        <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try{{num}}">
+        <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try{{num}}" [attr.data]="div.id" (click)="selectPositionByClick($event)">
         </div>
       </div>
     </div>
@@ -151,10 +156,11 @@
     <ion-grid>
       <ion-row text-center>
         <ion-col size="12">
-          <ion-chip outline color="primary" (click)="showShareOptions()">
+          <ion-chip outline color="warning" (click)="showShareOptions()">
             <ion-icon name="bar-chart-outline" style="float: right; margin-right:5px;"></ion-icon>
           </ion-chip>
-          <ion-chip id="triggerHelp" outline color="primary" style="float: right; margin-right:5px;" data-toggle="tooltip" data-placement="bottom" title="Ajuda">
+          <span style="margin-left: 8px; color: #fff !important">🏆 {{ totalScore }}</span>
+          <ion-chip id="triggerHelp" outline color="warning" style="float: right; margin-right:5px;" data-toggle="tooltip" data-placement="bottom" title="Ajuda">
             AJUDA
             <ion-icon name="help-circle-outline" style="margin-left:5px;"></ion-icon>
           </ion-chip>
