--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -65,7 +65,7 @@
   height: 40px;
   max-width: 40px;
   max-height: 40px;
-  font-size: 30px;
+  font-size: 1.5em;
   font-weight: bold;
   color: rgb(224, 175, 40);
   //color: orangered;
